adicionada a funcionalidade de edição

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -6,6 +6,9 @@
         <link rel="stylesheet" type="text/css" href="reset.css" media="screen"/>
         <title>Projeto Introdutório ZG Solutions</title>
         <link rel="stylesheet" type="text/css" href="stylesheet.css" media="screen"/>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet"> 
     </head>
     <body class="body">
         <div class="left_column">
@@ -20,7 +23,7 @@
                     <label for="data">PRAZO</label>
                     <input type="date" min="today" id="data"><br>
                     <label for="prioridade">PRIORIDADE</label>
-                    <input type="number" min="0" max="5" id="prioridade"><br>
+                    <input type="number" min="1" max="5" id="prioridade"><br>
                     <button type="submit" id="submit">CADASTRAR</button>
                 </form>
             </div>
